# field-service

./: README.md
fieldservice/i18n/: de.po  es.po  es_AR.po  es_CL.po  fieldservice.pot  fr.po  fr_FR.po  it.po  pt_BR.po  pt_PT.po  tr.po
fieldservice/models/: fsm_order.py
fieldservice/views/: fsm_order.xml
fieldservice_activity/: README.rst
fieldservice_activity/static/description/: index.html
fieldservice_agreement/: README.rst
fieldservice_agreement/static/description/: index.html
fieldservice_portal/: README.rst
fieldservice_portal/i18n/: it.po
fieldservice_portal/readme/: CONTRIBUTORS.md
fieldservice_portal/static/description/: index.html
fieldservice_project/: README.rst
fieldservice_project/static/description/: index.html
fieldservice_recurring/: README.rst
fieldservice_recurring/static/description/: index.html
fieldservice_sale/: README.rst
fieldservice_sale/static/description/: index.html
fieldservice_size/: README.rst
fieldservice_size/static/description/: index.html
fieldservice_stage_server_action/: README.rst
fieldservice_stage_server_action/static/description/: index.html
fieldservice_stage_validation/: __manifest__.py
fieldservice_vehicle/: README.rst
fieldservice_vehicle/static/description/: index.html
setup/_metapackage/: pyproject.toml
